--- a/SpringmvcAssignment5/Jenkinsfile
+++ b/SpringmvcAssignment5/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         }
         stage('Package') {
             steps {
-               bat 'mvn package -f SpringmvcAssignment5'
+               bat 'mvn package -f SpringmvcAssignment5/pom.xml'
             }
         }
     }
