--- a/SpringmvcAssignment5/pom.xml
+++ b/SpringmvcAssignment5/pom.xml
@@ -61,6 +61,16 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>SpringmvcAssignment5</finalName>
+		<plugins>
+                  <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                   <source>1.8</source>
+                   <target>1.8</target>
+                  </configuration>
+                </plugin>
+              </plugins>
+	      <finalName>SpringmvcAssignment5</finalName>
 	</build>
 </project>
